--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ scipy = "^1.8.0"
 pandas = "^1.4.1"
 PyYAML = "^6.0"
 requests = "^2.27.1"
+python-dateutil = "^2.8.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
