--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pandas = "^1.4.1"
 PyYAML = "^6.0"
 requests = "^2.27.1"
 python-dateutil = "^2.8.2"
+numpy = "^1.22.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
