--- a/printobs/insitu_locations.yaml
+++ b/printobs/insitu_locations.yaml
@@ -93,6 +93,10 @@ oseberg:
     operator: NA
     ID:
 
+oseberga:
+    operator: NA
+    ID: 76927
+
 osebergc:
     operator: NA
     ID: 76965
@@ -139,7 +143,7 @@ trolla:
 
 trollb:
     operator: Equinor_Energy
-    ID:
+    ID: 76957
 
 trollc:
     operator: Equinor_Energy
