--- a/printobs/variable_def.yaml
+++ b/printobs/variable_def.yaml
@@ -8,7 +8,11 @@ sea_surface_wave_period_at_variance_spectral_density_maximum: Tp
 sea_surface_primary_wave_from_direction: DDP
 sea_surface_wave_maximum_height: Hmax
 wind_speed: FF
-wind_speed_of_gust: FG
+#wind_speed_of_gust: FG
+#max(wind_speed_of_gust PT2M): FG_2MIN
+#max(wind_speed_of_gust PT2M): FG
+max(wind_speed_of_gust PT10M): FG10
+max(wind_speed_of_gust PT20M): FG20
 wind_from_direction: DD
 air_temperature: Ta
 sea_surface_height_above_lowest_astronomical_tide: HLAT
