--- a/printobs/variable_def.yaml
+++ b/printobs/variable_def.yaml
@@ -2,17 +2,50 @@
 # - variables are being read and printed in order
 # - variables make use of the given abbreviations
 
-sea_surface_wave_significant_height: Hs
-sea_surface_wave_mean_period: Tm02
-sea_surface_wave_period_at_variance_spectral_density_maximum: Tp
-sea_surface_primary_wave_from_direction: DDP
-sea_surface_wave_maximum_height: Hmax
-wind_speed: FF
+sea_surface_wave_significant_height: 
+        alias: Hs
+        prime_parameterid:
+        prime_level:
+sea_surface_wave_mean_period: 
+        alias: Tm02
+        prime_parameterid:
+        prime_level:
+sea_surface_wave_period_at_variance_spectral_density_maximum: 
+        alias: Tp
+        prime_parameterid:
+        prime_level:
+sea_surface_primary_wave_from_direction: 
+        alias: DDP
+        prime_parameterid:
+        prime_level:
+sea_surface_wave_maximum_height: 
+        alias: Hmax
+        prime_parameterid:
+        prime_level:
+wind_speed: 
+        alias: FF
+        prime_parameterid:
+        prime_level:
 #wind_speed_of_gust: FG
 #max(wind_speed_of_gust PT2M): FG_2MIN
 #max(wind_speed_of_gust PT2M): FG
-max(wind_speed_of_gust PT10M): FG10
-max(wind_speed_of_gust PT20M): FG20
-wind_from_direction: DD
-air_temperature: Ta
-sea_surface_height_above_lowest_astronomical_tide: HLAT
+max(wind_speed_of_gust PT10M): 
+        alias: FG10
+        prime_parameterid:
+        prime_level:
+max(wind_speed_of_gust PT20M): 
+        alias: FG20
+        prime_parameterid:
+        prime_level:
+wind_from_direction: 
+        alias: DD
+        prime_parameterid:
+        prime_level:
+air_temperature: 
+        alias: Ta
+        prime_parameterid:
+        prime_level:
+sea_surface_height_above_lowest_astronomical_tide: 
+        alias: HLAT
+        prime_parameterid:
+        prime_level:
