--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = ["Patrik Bohlinger <patrikb@met.no>"]
 printobs = 'printobs.cli:main'
 
 [tool.poetry.dependencies]
-python = ">=3.9,<3.11"
+python = ">=3.9,<=3.12"
 matplotlib = "^3.5.1"
 python-dotenv = "^0.19.2"
 scipy = "^1.8.0"
