--- a/printobs/insitu_locations.yaml
+++ b/printobs/insitu_locations.yaml
@@ -95,6 +95,10 @@ kristin:
     ID: 76963
     typeids: 22
 
+#hjelmøybanken:
+      #  ID: 20926
+      #  typeids: 538
+
 huldra: # not working
     operator: Equinor_Energy
     ID: 76962
@@ -224,6 +228,14 @@ visund: # not working
     operator:
     ID: 76968
     typeids: 22
+
+vestfjorden:
+  ID: 20932
+  typeids: 22
+
+#wisting:
+    #  ID: 20925
+    #  typeids: 22
 
 yme:
     operator: Repsol
