--- a/printobs/insitu_locations.yaml
+++ b/printobs/insitu_locations.yaml
@@ -16,6 +16,14 @@ fedjeosennv:
     ID: 52520
     typeids: 538
 
+fedjeosensv:
+    ID: 52520
+    typeids: 538
+
+hjeltefjorden_b:
+    ID: 52471
+    typeids: 538
+
 ### oil rigs ###
 asgarda:
     operator: Equinor_Energy
