--- a/environment.yml
+++ b/environment.yml
@@ -2,7 +2,7 @@ name: printobs
 channels:
   - conda-forge
 dependencies:
-  - python<=3.12
+  - python<3.11
   - matplotlib>=3.1
   - numpy>=1.15.4
   - scipy>=1.2.0
