adjusted names for fedjeosen as reported by Ingrid HS

--- a/printobs/insitu_locations.yaml
+++ b/printobs/insitu_locations.yaml
@@ -17,11 +17,11 @@ sotrabrua:
 fedje:
     ID: 52535
 
-fedjeosennv:
+fedjeosenI:
     ID: 52520
     typeids: 538
 
-fedjeosensv:
+fedjeosenII:
     ID: 52510
     typeids: 22
 
